# LightningScanner

./: .buildinfo  .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  genindex.html  gettingstarted.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  gettingstarted.doctree  index.doctree
.doctrees/api/: classLightningScanner_1_1AlignedAllocator.doctree  classLightningScanner_1_1ScanResult.doctree  classLightningScanner_1_1Scanner.doctree  dir__home_runner_work_LightningScanner_LightningScanner_include.doctree  dir__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner.doctree  dir__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_allocator.doctree  dir__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_backends.doctree  enum_ScanMode_8hpp_1af9e3bb003dab9b2cf00854a1eb3b01f0.doctree  file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_CpuInfo.hpp.doctree  file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_LightningScanner.hpp.doctree  file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_Pattern.hpp.doctree  file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_ScanMode.hpp.doctree  file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_ScanResult.hpp.doctree  file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_allocator_AlignedAllocator.hpp.doctree  file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_backends_Avx2.hpp.doctree  file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_backends_Scalar.hpp.doctree  file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_backends_Sse42.hpp.doctree  file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_backends_StdFind.hpp.doctree  function_Avx2_8hpp_1adefc7e7e854d228955b8ee844d1d8d6f.doctree  function_Scalar_8hpp_1a369c2061275480d50ec15632cfc5e193.doctree  function_Sse42_8hpp_1ad1108528070d7402171ae16362cdcd3c.doctree  function_StdFind_8hpp_1ab6e13477c536553e08d80a2511bb3117.doctree  library_root.doctree  namespace_LightningScanner.doctree  program_listing_file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_CpuInfo.hpp.doctree  (+13 more)
_sources/: gettingstarted.rst.txt
api/: classLightningScanner_1_1AlignedAllocator.html  classLightningScanner_1_1ScanResult.html  classLightningScanner_1_1Scanner.html  dir__home_runner_work_LightningScanner_LightningScanner_include.html  dir__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner.html  dir__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_allocator.html  dir__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_backends.html  enum_ScanMode_8hpp_1af9e3bb003dab9b2cf00854a1eb3b01f0.html  file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_CpuInfo.hpp.html  file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_LightningScanner.hpp.html  file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_Pattern.hpp.html  file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_ScanMode.hpp.html  file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_ScanResult.hpp.html  file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_allocator_AlignedAllocator.hpp.html  file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_backends_Avx2.hpp.html  file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_backends_Scalar.hpp.html  file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_backends_Sse42.hpp.html  file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_backends_StdFind.hpp.html  function_Avx2_8hpp_1adefc7e7e854d228955b8ee844d1d8d6f.html  function_Scalar_8hpp_1a369c2061275480d50ec15632cfc5e193.html  function_Sse42_8hpp_1ad1108528070d7402171ae16362cdcd3c.html  function_StdFind_8hpp_1ab6e13477c536553e08d80a2511bb3117.html  library_root.html  namespace_LightningScanner.html  program_listing_file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_CpuInfo.hpp.html  program_listing_file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_LightningScanner.hpp.html  program_listing_file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_Pattern.hpp.html  program_listing_file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_ScanMode.hpp.html  program_listing_file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_ScanResult.hpp.html  program_listing_file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_allocator_AlignedAllocator.hpp.html  program_listing_file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_backends_Avx2.hpp.html  program_listing_file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_backends_Scalar.hpp.html  program_listing_file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_backends_Sse42.hpp.html  program_listing_file__home_runner_work_LightningScanner_LightningScanner_include_LightningScanner_backends_StdFind.hpp.html  structLightningScanner_1_1AlignedAllocator_1_1rebind.html  structLightningScanner_1_1CpuInfo.html  structLightningScanner_1_1Pattern.html  unabridged_orphan.html
bench/: CMakeLists.txt  LightningBench.cpp
cmake/: FindSphinx.cmake  LightningScannerConfig.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  gettingstarted.rst  index.rst
src/: CpuInfo.cpp
tests/: CMakeLists.txt  LargePattern.cpp  Shared.hpp  SimilarPattern.cpp  SmallPattern.cpp
(+54 files in other folders)
